# novellum

./: .gitignore  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.md  roadmap.md
docs/cli/: alias.md  backlinks.md  broken.md  compile.md  delete.md  edit.md  graph.md  index.md  init.md  links.md  list.md  log-new.md  move.md  new.md  open.md  rename.md  retag.md  search.md  select.md  show.md  stitch.md  tag.md  today.md
docs/getting-started/: 10-minute-guide.md
docs/stylesheets/: extra.css
src/novellum/: __init__.py  cli.py  graph.py  index.py  logging.py  models.py  output.py  parser.py  render.py  selection.py  storage.py
src/novellum/bibliography/: references.bib
src/novellum/commands/: __init__.py  alias_note.py  backlinks.py  broken_links.py  compile_document.py  delete_note.py  edit_note.py  graph_view.py  init.py  links.py  list_notes.py  log_new.py  move_note.py  new_note.py  open_document.py  rename_note.py  retag_note.py  search_notes.py  select_notes.py  show_note.py  stitch_notes.py  tag_note.py  today.py
src/novellum/templates/: default.tex  log.tex
src/novellum/tex/: novellum.sty  stitched-preamble.tex
tests/: conftest.py  test_cli.py  test_index.py  test_parser.py  test_render.py  test_storage.py
vault/.novellum/: config.toml  index.json
vault/notes/concept/: operator-semigroup.tex  spectral-gap.tex  test-note.tex
vault/notes/experiment/: heat-kernel.tex  new-experiment.tex
vault/notes/log/: log-2026-04-03.tex
vault/notes/proof/: lemma-poincare.tex
vault/notes/ref/: engel-nagel.tex
vault/tex/: stitched-preamble.tex  workspace.tex
