[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novellum"
version = "0.1.0"
description = "A CLI for linked LaTeX research notes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "leogabac" }
]
dependencies = [
  "rich>=13.9",
  "sysentropy",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
docs = [
  "mkdocs-material>=9.6",
]

[project.scripts]
novellum = "novellum.cli:main"
nv = "novellum.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
